module_2/part_2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CLOSEDATA
    CLOSEH3
    CLOSEH4
    CLOSEHEADER
    CLOSEROW
    CLOSESPAN
    CLOSESTYLE
    CLOSETABLE
    GARBAGE
    OPENDATA
    OPENDIV
    OPENH2
    OPENH3
    OPENH4
    OPENHEADER
    OPENROW
    OPENSPAN
    OPENSTYLE
    OPENTABLE

Grammar

Rule 0     S' -> start
Rule 1     start -> table
Rule 2     skiptag -> CONTENT skiptag
Rule 3     skiptag -> OPENHREF skiptag
Rule 4     skiptag -> CLOSEHREF skiptag
Rule 5     skiptag -> CHART skiptag
Rule 6     skiptag -> TITLE skiptag
Rule 7     skiptag -> SUBTITLE skiptag
Rule 8     skiptag -> YAXIS skiptag
Rule 9     skiptag -> LEGEND skiptag
Rule 10    skiptag -> CREDITS skiptag
Rule 11    skiptag -> PLOTOPTIONS skiptag
Rule 12    skiptag -> empty
Rule 13    handledata -> XAXIS CATEGORIE CONTENT DATATAGCLOSE handledata
Rule 14    handledata -> skiptag SERIES handleseriesdata DATATAGCLOSE skiptag RESPONSIVE
Rule 15    handledata -> empty
Rule 16    handleseriesdata -> NAMETAG handleseriesdata
Rule 17    handleseriesdata -> CONTENT handleseriesdata
Rule 18    handleseriesdata -> DATATAG CONTENT DATATAGCLOSE handleseriesdata
Rule 19    handleseriesdata -> empty
Rule 20    table -> BEGINTABLEA CLOSEDIV skiptag handledata
Rule 21    empty -> <empty>
Rule 22    content -> CONTENT
Rule 23    content -> empty

Terminals, with rules where they appear

BEGINTABLEA          : 20
CATEGORIE            : 13
CHART                : 5
CLOSEDATA            : 
CLOSEDIV             : 20
CLOSEH3              : 
CLOSEH4              : 
CLOSEHEADER          : 
CLOSEHREF            : 4
CLOSEROW             : 
CLOSESPAN            : 
CLOSESTYLE           : 
CLOSETABLE           : 
CONTENT              : 2 13 17 18 22
CREDITS              : 10
DATATAG              : 18
DATATAGCLOSE         : 13 14 18
GARBAGE              : 
LEGEND               : 9
NAMETAG              : 16
OPENDATA             : 
OPENDIV              : 
OPENH2               : 
OPENH3               : 
OPENH4               : 
OPENHEADER           : 
OPENHREF             : 3
OPENROW              : 
OPENSPAN             : 
OPENSTYLE            : 
OPENTABLE            : 
PLOTOPTIONS          : 11
RESPONSIVE           : 14
SERIES               : 14
SUBTITLE             : 7
TITLE                : 6
XAXIS                : 13
YAXIS                : 8
error                : 

Nonterminals, with rules where they appear

content              : 
empty                : 12 15 19 23
handledata           : 13 20
handleseriesdata     : 14 16 17 18
skiptag              : 2 3 4 5 6 7 8 9 10 11 14 14 20
start                : 0
table                : 1

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . table
    (20) table -> . BEGINTABLEA CLOSEDIV skiptag handledata

    BEGINTABLEA     shift and go to state 3

    start                          shift and go to state 1
    table                          shift and go to state 2

state 1

    (0) S' -> start .



state 2

    (1) start -> table .

    $end            reduce using rule 1 (start -> table .)


state 3

    (20) table -> BEGINTABLEA . CLOSEDIV skiptag handledata

    CLOSEDIV        shift and go to state 4


state 4

    (20) table -> BEGINTABLEA CLOSEDIV . skiptag handledata
    (2) skiptag -> . CONTENT skiptag
    (3) skiptag -> . OPENHREF skiptag
    (4) skiptag -> . CLOSEHREF skiptag
    (5) skiptag -> . CHART skiptag
    (6) skiptag -> . TITLE skiptag
    (7) skiptag -> . SUBTITLE skiptag
    (8) skiptag -> . YAXIS skiptag
    (9) skiptag -> . LEGEND skiptag
    (10) skiptag -> . CREDITS skiptag
    (11) skiptag -> . PLOTOPTIONS skiptag
    (12) skiptag -> . empty
    (21) empty -> .

  ! shift/reduce conflict for CONTENT resolved as shift
  ! shift/reduce conflict for OPENHREF resolved as shift
  ! shift/reduce conflict for CLOSEHREF resolved as shift
  ! shift/reduce conflict for CHART resolved as shift
  ! shift/reduce conflict for TITLE resolved as shift
  ! shift/reduce conflict for SUBTITLE resolved as shift
  ! shift/reduce conflict for YAXIS resolved as shift
  ! shift/reduce conflict for LEGEND resolved as shift
  ! shift/reduce conflict for CREDITS resolved as shift
  ! shift/reduce conflict for PLOTOPTIONS resolved as shift
    CONTENT         shift and go to state 6
    OPENHREF        shift and go to state 7
    CLOSEHREF       shift and go to state 8
    CHART           shift and go to state 9
    TITLE           shift and go to state 10
    SUBTITLE        shift and go to state 11
    YAXIS           shift and go to state 12
    LEGEND          shift and go to state 13
    CREDITS         shift and go to state 14
    PLOTOPTIONS     shift and go to state 15
    XAXIS           reduce using rule 21 (empty -> .)
    SERIES          reduce using rule 21 (empty -> .)
    $end            reduce using rule 21 (empty -> .)

  ! CONTENT         [ reduce using rule 21 (empty -> .) ]
  ! OPENHREF        [ reduce using rule 21 (empty -> .) ]
  ! CLOSEHREF       [ reduce using rule 21 (empty -> .) ]
  ! CHART           [ reduce using rule 21 (empty -> .) ]
  ! TITLE           [ reduce using rule 21 (empty -> .) ]
  ! SUBTITLE        [ reduce using rule 21 (empty -> .) ]
  ! YAXIS           [ reduce using rule 21 (empty -> .) ]
  ! LEGEND          [ reduce using rule 21 (empty -> .) ]
  ! CREDITS         [ reduce using rule 21 (empty -> .) ]
  ! PLOTOPTIONS     [ reduce using rule 21 (empty -> .) ]

    skiptag                        shift and go to state 5
    empty                          shift and go to state 16

state 5

    (20) table -> BEGINTABLEA CLOSEDIV skiptag . handledata
    (13) handledata -> . XAXIS CATEGORIE CONTENT DATATAGCLOSE handledata
    (14) handledata -> . skiptag SERIES handleseriesdata DATATAGCLOSE skiptag RESPONSIVE
    (15) handledata -> . empty
    (2) skiptag -> . CONTENT skiptag
    (3) skiptag -> . OPENHREF skiptag
    (4) skiptag -> . CLOSEHREF skiptag
    (5) skiptag -> . CHART skiptag
    (6) skiptag -> . TITLE skiptag
    (7) skiptag -> . SUBTITLE skiptag
    (8) skiptag -> . YAXIS skiptag
    (9) skiptag -> . LEGEND skiptag
    (10) skiptag -> . CREDITS skiptag
    (11) skiptag -> . PLOTOPTIONS skiptag
    (12) skiptag -> . empty
    (21) empty -> .

    XAXIS           shift and go to state 19
    CONTENT         shift and go to state 6
    OPENHREF        shift and go to state 7
    CLOSEHREF       shift and go to state 8
    CHART           shift and go to state 9
    TITLE           shift and go to state 10
    SUBTITLE        shift and go to state 11
    YAXIS           shift and go to state 12
    LEGEND          shift and go to state 13
    CREDITS         shift and go to state 14
    PLOTOPTIONS     shift and go to state 15
    $end            reduce using rule 21 (empty -> .)
    SERIES          reduce using rule 21 (empty -> .)

    skiptag                        shift and go to state 17
    handledata                     shift and go to state 18
    empty                          shift and go to state 20

state 6

    (2) skiptag -> CONTENT . skiptag
    (2) skiptag -> . CONTENT skiptag
    (3) skiptag -> . OPENHREF skiptag
    (4) skiptag -> . CLOSEHREF skiptag
    (5) skiptag -> . CHART skiptag
    (6) skiptag -> . TITLE skiptag
    (7) skiptag -> . SUBTITLE skiptag
    (8) skiptag -> . YAXIS skiptag
    (9) skiptag -> . LEGEND skiptag
    (10) skiptag -> . CREDITS skiptag
    (11) skiptag -> . PLOTOPTIONS skiptag
    (12) skiptag -> . empty
    (21) empty -> .

  ! shift/reduce conflict for CONTENT resolved as shift
  ! shift/reduce conflict for OPENHREF resolved as shift
  ! shift/reduce conflict for CLOSEHREF resolved as shift
  ! shift/reduce conflict for CHART resolved as shift
  ! shift/reduce conflict for TITLE resolved as shift
  ! shift/reduce conflict for SUBTITLE resolved as shift
  ! shift/reduce conflict for YAXIS resolved as shift
  ! shift/reduce conflict for LEGEND resolved as shift
  ! shift/reduce conflict for CREDITS resolved as shift
  ! shift/reduce conflict for PLOTOPTIONS resolved as shift
    CONTENT         shift and go to state 6
    OPENHREF        shift and go to state 7
    CLOSEHREF       shift and go to state 8
    CHART           shift and go to state 9
    TITLE           shift and go to state 10
    SUBTITLE        shift and go to state 11
    YAXIS           shift and go to state 12
    LEGEND          shift and go to state 13
    CREDITS         shift and go to state 14
    PLOTOPTIONS     shift and go to state 15
    XAXIS           reduce using rule 21 (empty -> .)
    SERIES          reduce using rule 21 (empty -> .)
    $end            reduce using rule 21 (empty -> .)
    RESPONSIVE      reduce using rule 21 (empty -> .)

  ! CONTENT         [ reduce using rule 21 (empty -> .) ]
  ! OPENHREF        [ reduce using rule 21 (empty -> .) ]
  ! CLOSEHREF       [ reduce using rule 21 (empty -> .) ]
  ! CHART           [ reduce using rule 21 (empty -> .) ]
  ! TITLE           [ reduce using rule 21 (empty -> .) ]
  ! SUBTITLE        [ reduce using rule 21 (empty -> .) ]
  ! YAXIS           [ reduce using rule 21 (empty -> .) ]
  ! LEGEND          [ reduce using rule 21 (empty -> .) ]
  ! CREDITS         [ reduce using rule 21 (empty -> .) ]
  ! PLOTOPTIONS     [ reduce using rule 21 (empty -> .) ]

    skiptag                        shift and go to state 21
    empty                          shift and go to state 16

state 7

    (3) skiptag -> OPENHREF . skiptag
    (2) skiptag -> . CONTENT skiptag
    (3) skiptag -> . OPENHREF skiptag
    (4) skiptag -> . CLOSEHREF skiptag
    (5) skiptag -> . CHART skiptag
    (6) skiptag -> . TITLE skiptag
    (7) skiptag -> . SUBTITLE skiptag
    (8) skiptag -> . YAXIS skiptag
    (9) skiptag -> . LEGEND skiptag
    (10) skiptag -> . CREDITS skiptag
    (11) skiptag -> . PLOTOPTIONS skiptag
    (12) skiptag -> . empty
    (21) empty -> .

  ! shift/reduce conflict for CONTENT resolved as shift
  ! shift/reduce conflict for OPENHREF resolved as shift
  ! shift/reduce conflict for CLOSEHREF resolved as shift
  ! shift/reduce conflict for CHART resolved as shift
  ! shift/reduce conflict for TITLE resolved as shift
  ! shift/reduce conflict for SUBTITLE resolved as shift
  ! shift/reduce conflict for YAXIS resolved as shift
  ! shift/reduce conflict for LEGEND resolved as shift
  ! shift/reduce conflict for CREDITS resolved as shift
  ! shift/reduce conflict for PLOTOPTIONS resolved as shift
    CONTENT         shift and go to state 6
    OPENHREF        shift and go to state 7
    CLOSEHREF       shift and go to state 8
    CHART           shift and go to state 9
    TITLE           shift and go to state 10
    SUBTITLE        shift and go to state 11
    YAXIS           shift and go to state 12
    LEGEND          shift and go to state 13
    CREDITS         shift and go to state 14
    PLOTOPTIONS     shift and go to state 15
    XAXIS           reduce using rule 21 (empty -> .)
    SERIES          reduce using rule 21 (empty -> .)
    $end            reduce using rule 21 (empty -> .)
    RESPONSIVE      reduce using rule 21 (empty -> .)

  ! CONTENT         [ reduce using rule 21 (empty -> .) ]
  ! OPENHREF        [ reduce using rule 21 (empty -> .) ]
  ! CLOSEHREF       [ reduce using rule 21 (empty -> .) ]
  ! CHART           [ reduce using rule 21 (empty -> .) ]
  ! TITLE           [ reduce using rule 21 (empty -> .) ]
  ! SUBTITLE        [ reduce using rule 21 (empty -> .) ]
  ! YAXIS           [ reduce using rule 21 (empty -> .) ]
  ! LEGEND          [ reduce using rule 21 (empty -> .) ]
  ! CREDITS         [ reduce using rule 21 (empty -> .) ]
  ! PLOTOPTIONS     [ reduce using rule 21 (empty -> .) ]

    skiptag                        shift and go to state 22
    empty                          shift and go to state 16

state 8

    (4) skiptag -> CLOSEHREF . skiptag
    (2) skiptag -> . CONTENT skiptag
    (3) skiptag -> . OPENHREF skiptag
    (4) skiptag -> . CLOSEHREF skiptag
    (5) skiptag -> . CHART skiptag
    (6) skiptag -> . TITLE skiptag
    (7) skiptag -> . SUBTITLE skiptag
    (8) skiptag -> . YAXIS skiptag
    (9) skiptag -> . LEGEND skiptag
    (10) skiptag -> . CREDITS skiptag
    (11) skiptag -> . PLOTOPTIONS skiptag
    (12) skiptag -> . empty
    (21) empty -> .

  ! shift/reduce conflict for CONTENT resolved as shift
  ! shift/reduce conflict for OPENHREF resolved as shift
  ! shift/reduce conflict for CLOSEHREF resolved as shift
  ! shift/reduce conflict for CHART resolved as shift
  ! shift/reduce conflict for TITLE resolved as shift
  ! shift/reduce conflict for SUBTITLE resolved as shift
  ! shift/reduce conflict for YAXIS resolved as shift
  ! shift/reduce conflict for LEGEND resolved as shift
  ! shift/reduce conflict for CREDITS resolved as shift
  ! shift/reduce conflict for PLOTOPTIONS resolved as shift
    CONTENT         shift and go to state 6
    OPENHREF        shift and go to state 7
    CLOSEHREF       shift and go to state 8
    CHART           shift and go to state 9
    TITLE           shift and go to state 10
    SUBTITLE        shift and go to state 11
    YAXIS           shift and go to state 12
    LEGEND          shift and go to state 13
    CREDITS         shift and go to state 14
    PLOTOPTIONS     shift and go to state 15
    XAXIS           reduce using rule 21 (empty -> .)
    SERIES          reduce using rule 21 (empty -> .)
    $end            reduce using rule 21 (empty -> .)
    RESPONSIVE      reduce using rule 21 (empty -> .)

  ! CONTENT         [ reduce using rule 21 (empty -> .) ]
  ! OPENHREF        [ reduce using rule 21 (empty -> .) ]
  ! CLOSEHREF       [ reduce using rule 21 (empty -> .) ]
  ! CHART           [ reduce using rule 21 (empty -> .) ]
  ! TITLE           [ reduce using rule 21 (empty -> .) ]
  ! SUBTITLE        [ reduce using rule 21 (empty -> .) ]
  ! YAXIS           [ reduce using rule 21 (empty -> .) ]
  ! LEGEND          [ reduce using rule 21 (empty -> .) ]
  ! CREDITS         [ reduce using rule 21 (empty -> .) ]
  ! PLOTOPTIONS     [ reduce using rule 21 (empty -> .) ]

    skiptag                        shift and go to state 23
    empty                          shift and go to state 16

state 9

    (5) skiptag -> CHART . skiptag
    (2) skiptag -> . CONTENT skiptag
    (3) skiptag -> . OPENHREF skiptag
    (4) skiptag -> . CLOSEHREF skiptag
    (5) skiptag -> . CHART skiptag
    (6) skiptag -> . TITLE skiptag
    (7) skiptag -> . SUBTITLE skiptag
    (8) skiptag -> . YAXIS skiptag
    (9) skiptag -> . LEGEND skiptag
    (10) skiptag -> . CREDITS skiptag
    (11) skiptag -> . PLOTOPTIONS skiptag
    (12) skiptag -> . empty
    (21) empty -> .

  ! shift/reduce conflict for CONTENT resolved as shift
  ! shift/reduce conflict for OPENHREF resolved as shift
  ! shift/reduce conflict for CLOSEHREF resolved as shift
  ! shift/reduce conflict for CHART resolved as shift
  ! shift/reduce conflict for TITLE resolved as shift
  ! shift/reduce conflict for SUBTITLE resolved as shift
  ! shift/reduce conflict for YAXIS resolved as shift
  ! shift/reduce conflict for LEGEND resolved as shift
  ! shift/reduce conflict for CREDITS resolved as shift
  ! shift/reduce conflict for PLOTOPTIONS resolved as shift
    CONTENT         shift and go to state 6
    OPENHREF        shift and go to state 7
    CLOSEHREF       shift and go to state 8
    CHART           shift and go to state 9
    TITLE           shift and go to state 10
    SUBTITLE        shift and go to state 11
    YAXIS           shift and go to state 12
    LEGEND          shift and go to state 13
    CREDITS         shift and go to state 14
    PLOTOPTIONS     shift and go to state 15
    XAXIS           reduce using rule 21 (empty -> .)
    SERIES          reduce using rule 21 (empty -> .)
    $end            reduce using rule 21 (empty -> .)
    RESPONSIVE      reduce using rule 21 (empty -> .)

  ! CONTENT         [ reduce using rule 21 (empty -> .) ]
  ! OPENHREF        [ reduce using rule 21 (empty -> .) ]
  ! CLOSEHREF       [ reduce using rule 21 (empty -> .) ]
  ! CHART           [ reduce using rule 21 (empty -> .) ]
  ! TITLE           [ reduce using rule 21 (empty -> .) ]
  ! SUBTITLE        [ reduce using rule 21 (empty -> .) ]
  ! YAXIS           [ reduce using rule 21 (empty -> .) ]
  ! LEGEND          [ reduce using rule 21 (empty -> .) ]
  ! CREDITS         [ reduce using rule 21 (empty -> .) ]
  ! PLOTOPTIONS     [ reduce using rule 21 (empty -> .) ]

    skiptag                        shift and go to state 24
    empty                          shift and go to state 16

state 10

    (6) skiptag -> TITLE . skiptag
    (2) skiptag -> . CONTENT skiptag
    (3) skiptag -> . OPENHREF skiptag
    (4) skiptag -> . CLOSEHREF skiptag
    (5) skiptag -> . CHART skiptag
    (6) skiptag -> . TITLE skiptag
    (7) skiptag -> . SUBTITLE skiptag
    (8) skiptag -> . YAXIS skiptag
    (9) skiptag -> . LEGEND skiptag
    (10) skiptag -> . CREDITS skiptag
    (11) skiptag -> . PLOTOPTIONS skiptag
    (12) skiptag -> . empty
    (21) empty -> .

  ! shift/reduce conflict for CONTENT resolved as shift
  ! shift/reduce conflict for OPENHREF resolved as shift
  ! shift/reduce conflict for CLOSEHREF resolved as shift
  ! shift/reduce conflict for CHART resolved as shift
  ! shift/reduce conflict for TITLE resolved as shift
  ! shift/reduce conflict for SUBTITLE resolved as shift
  ! shift/reduce conflict for YAXIS resolved as shift
  ! shift/reduce conflict for LEGEND resolved as shift
  ! shift/reduce conflict for CREDITS resolved as shift
  ! shift/reduce conflict for PLOTOPTIONS resolved as shift
    CONTENT         shift and go to state 6
    OPENHREF        shift and go to state 7
    CLOSEHREF       shift and go to state 8
    CHART           shift and go to state 9
    TITLE           shift and go to state 10
    SUBTITLE        shift and go to state 11
    YAXIS           shift and go to state 12
    LEGEND          shift and go to state 13
    CREDITS         shift and go to state 14
    PLOTOPTIONS     shift and go to state 15
    XAXIS           reduce using rule 21 (empty -> .)
    SERIES          reduce using rule 21 (empty -> .)
    $end            reduce using rule 21 (empty -> .)
    RESPONSIVE      reduce using rule 21 (empty -> .)

  ! CONTENT         [ reduce using rule 21 (empty -> .) ]
  ! OPENHREF        [ reduce using rule 21 (empty -> .) ]
  ! CLOSEHREF       [ reduce using rule 21 (empty -> .) ]
  ! CHART           [ reduce using rule 21 (empty -> .) ]
  ! TITLE           [ reduce using rule 21 (empty -> .) ]
  ! SUBTITLE        [ reduce using rule 21 (empty -> .) ]
  ! YAXIS           [ reduce using rule 21 (empty -> .) ]
  ! LEGEND          [ reduce using rule 21 (empty -> .) ]
  ! CREDITS         [ reduce using rule 21 (empty -> .) ]
  ! PLOTOPTIONS     [ reduce using rule 21 (empty -> .) ]

    skiptag                        shift and go to state 25
    empty                          shift and go to state 16

state 11

    (7) skiptag -> SUBTITLE . skiptag
    (2) skiptag -> . CONTENT skiptag
    (3) skiptag -> . OPENHREF skiptag
    (4) skiptag -> . CLOSEHREF skiptag
    (5) skiptag -> . CHART skiptag
    (6) skiptag -> . TITLE skiptag
    (7) skiptag -> . SUBTITLE skiptag
    (8) skiptag -> . YAXIS skiptag
    (9) skiptag -> . LEGEND skiptag
    (10) skiptag -> . CREDITS skiptag
    (11) skiptag -> . PLOTOPTIONS skiptag
    (12) skiptag -> . empty
    (21) empty -> .

  ! shift/reduce conflict for CONTENT resolved as shift
  ! shift/reduce conflict for OPENHREF resolved as shift
  ! shift/reduce conflict for CLOSEHREF resolved as shift
  ! shift/reduce conflict for CHART resolved as shift
  ! shift/reduce conflict for TITLE resolved as shift
  ! shift/reduce conflict for SUBTITLE resolved as shift
  ! shift/reduce conflict for YAXIS resolved as shift
  ! shift/reduce conflict for LEGEND resolved as shift
  ! shift/reduce conflict for CREDITS resolved as shift
  ! shift/reduce conflict for PLOTOPTIONS resolved as shift
    CONTENT         shift and go to state 6
    OPENHREF        shift and go to state 7
    CLOSEHREF       shift and go to state 8
    CHART           shift and go to state 9
    TITLE           shift and go to state 10
    SUBTITLE        shift and go to state 11
    YAXIS           shift and go to state 12
    LEGEND          shift and go to state 13
    CREDITS         shift and go to state 14
    PLOTOPTIONS     shift and go to state 15
    XAXIS           reduce using rule 21 (empty -> .)
    SERIES          reduce using rule 21 (empty -> .)
    $end            reduce using rule 21 (empty -> .)
    RESPONSIVE      reduce using rule 21 (empty -> .)

  ! CONTENT         [ reduce using rule 21 (empty -> .) ]
  ! OPENHREF        [ reduce using rule 21 (empty -> .) ]
  ! CLOSEHREF       [ reduce using rule 21 (empty -> .) ]
  ! CHART           [ reduce using rule 21 (empty -> .) ]
  ! TITLE           [ reduce using rule 21 (empty -> .) ]
  ! SUBTITLE        [ reduce using rule 21 (empty -> .) ]
  ! YAXIS           [ reduce using rule 21 (empty -> .) ]
  ! LEGEND          [ reduce using rule 21 (empty -> .) ]
  ! CREDITS         [ reduce using rule 21 (empty -> .) ]
  ! PLOTOPTIONS     [ reduce using rule 21 (empty -> .) ]

    skiptag                        shift and go to state 26
    empty                          shift and go to state 16

state 12

    (8) skiptag -> YAXIS . skiptag
    (2) skiptag -> . CONTENT skiptag
    (3) skiptag -> . OPENHREF skiptag
    (4) skiptag -> . CLOSEHREF skiptag
    (5) skiptag -> . CHART skiptag
    (6) skiptag -> . TITLE skiptag
    (7) skiptag -> . SUBTITLE skiptag
    (8) skiptag -> . YAXIS skiptag
    (9) skiptag -> . LEGEND skiptag
    (10) skiptag -> . CREDITS skiptag
    (11) skiptag -> . PLOTOPTIONS skiptag
    (12) skiptag -> . empty
    (21) empty -> .

  ! shift/reduce conflict for CONTENT resolved as shift
  ! shift/reduce conflict for OPENHREF resolved as shift
  ! shift/reduce conflict for CLOSEHREF resolved as shift
  ! shift/reduce conflict for CHART resolved as shift
  ! shift/reduce conflict for TITLE resolved as shift
  ! shift/reduce conflict for SUBTITLE resolved as shift
  ! shift/reduce conflict for YAXIS resolved as shift
  ! shift/reduce conflict for LEGEND resolved as shift
  ! shift/reduce conflict for CREDITS resolved as shift
  ! shift/reduce conflict for PLOTOPTIONS resolved as shift
    CONTENT         shift and go to state 6
    OPENHREF        shift and go to state 7
    CLOSEHREF       shift and go to state 8
    CHART           shift and go to state 9
    TITLE           shift and go to state 10
    SUBTITLE        shift and go to state 11
    YAXIS           shift and go to state 12
    LEGEND          shift and go to state 13
    CREDITS         shift and go to state 14
    PLOTOPTIONS     shift and go to state 15
    XAXIS           reduce using rule 21 (empty -> .)
    SERIES          reduce using rule 21 (empty -> .)
    $end            reduce using rule 21 (empty -> .)
    RESPONSIVE      reduce using rule 21 (empty -> .)

  ! CONTENT         [ reduce using rule 21 (empty -> .) ]
  ! OPENHREF        [ reduce using rule 21 (empty -> .) ]
  ! CLOSEHREF       [ reduce using rule 21 (empty -> .) ]
  ! CHART           [ reduce using rule 21 (empty -> .) ]
  ! TITLE           [ reduce using rule 21 (empty -> .) ]
  ! SUBTITLE        [ reduce using rule 21 (empty -> .) ]
  ! YAXIS           [ reduce using rule 21 (empty -> .) ]
  ! LEGEND          [ reduce using rule 21 (empty -> .) ]
  ! CREDITS         [ reduce using rule 21 (empty -> .) ]
  ! PLOTOPTIONS     [ reduce using rule 21 (empty -> .) ]

    skiptag                        shift and go to state 27
    empty                          shift and go to state 16

state 13
